# TopiCLEAR

./: .gitignore  CITATION.cff  README.md  build-constraints.txt  pyproject.toml  requirements-dev.in  requirements.in  requirements.txt
configs/: default.yaml
docs/: README_docs.md
experiments/: data_io.py  evaluation.py  preprocessing.py  utils.py  word_ranking.py
experiments/methods/: topiclear_runner.py
src/topiclear/: __init__.py  features.py  topiclear.py
tests/: test_fit_embeddings.py  test_input_type.py  test_random_state.py  test_smoke.py  test_text_input.py  test_transform_shape.py
